# rathole-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.yaml  makefile  manifest.yaml  mix.exs  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: buildandpush.yaml
config/: bonny.exs
crd/: client.yaml  manifest.yaml  noisekey.yaml  server.yaml
crd/example/: noisekey.yaml
crd/example/noisedirect/: client.yaml  server.yaml
crd/example/noiseref/: client.yaml  server.yaml
crd/example/simple/: client.yaml  resources.yaml  server.yaml
crd/schema/: README.md  client.yaml  crd.yaml  noisekey.yaml  server.yaml
deploy/: Dockerfile  kustomization.yaml
deploy/crd/: crd.yaml
deploy/crd/example/simple/: client-fail.yaml  client-right.yaml  client.yaml  server.yaml  token.yaml
deploy/k8s/: deployment.yaml  namespace.yaml  rbac.yaml  service.yaml
docs/: arch.d2
example/: client.yaml  server.yaml
lib/: rathole.ex
lib/rathole/: operator.ex
lib/rathole/controllers/: noisekey_controller.ex
lib/rathole/v1alpha1/: client.ex  noisekey.ex  server.ex
src/: .gitignore  README.md  config.rs  controller.rs  crd.rs  crdgen.rs  genkey.rs  lib.rs  main.rs  manifest.yaml  method.rs  mix.exs  rathole.rs  telemetry.rs
src/config/: bonny.exs  config.exs
src/lib/mix/tasks/bonny.gen.manifest/: customizer.ex
src/lib/rathole/: application.ex  k8s_conn.ex  operator.ex
src/lib/rathole/controllers/: client_controller.ex  server_controller.ex
src/lib/rathole/v1alpha1/: noisekey.ex
src/test/mix/tasks/bonny.gen.manifest/: customizer_test.exs
src/test/support/: discovery.json
test/: rathole_test.exs
test/rathole/controllers/: client_controller_test.exs  noisekey_controller_test.exs  server_controller_test.exs
test/support/: discovery.json
