[package]
name = "rathole-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.79"}
tokio = {version = "1.35.1", features = ["full"]}

kube = {version = "0.87.2"}
kube-derive = {version = "0.87.2"}
schemars = {version = "0.8.16"}
k8s-openapi = {version = "0.20.0", default-features = false, features = ["v1_27"]}

serde = {version = "1.0.195"}
serde_json = {version = "1.0.111"}
tracing-subscriber = {version = "0.3.18"}