[package]
name = "rathole-operator"
authors = ["Chanyub Park <mrchypark@gmail.com>"]
version = "0.0.2"
edition = "2021"
default-run = "rathole-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79" }
thiserror = { version = "1.0.56" }
futures = { version = "0.3.30" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4.31", features = ["serde"] }

kube = { version = "0.87.2", features = ["runtime", "derive", "client"] }
schemars = { version = "0.8.16" }
k8s-openapi = { version = "0.20.0", default-features = false, features = [
  "v1_27",
] }

serde = { version = "1.0.195" }
serde_json = { version = "1.0.111" }
serde_yaml = { version = "0.9.30" }
toml = { version = "0.8.8" }
lazy_static = { version = "1.4.0" }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0" }
opentelemetry-otlp = { version = "0.14.0", features = ["tokio"] }

base64 = { version = "0.21.6" }
url = { version = "2.5.0", features = ["serde"] }
ctrlc = { version = "3.4.2" }
snowstorm = { version = "0.4", features = ["stream"], default-features = false }
actix-web = { version = "4.4.1" }

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"
